--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ APP_SECRET=fa41f3a8b0960105665a10cc77269b45
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> docker-compose ###
+PROJECT_NAME=symfony-docker
+###< docker-compose ###
