--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,9 @@ services:
   mysql:
     image: mysql:5.7
     container_name: ${PROJECT_NAME}-mysql
-#    working_dir: /application
-#    volumes:
-#      - db-data:/application
+    working_dir: /symfony
+    volumes:
+      - db-data:/symfony
     environment:
       - MYSQL_ROOT_PASSWORD=docker_root
       - MYSQL_DATABASE=sf4_db
@@ -20,18 +20,18 @@ services:
 
   nginx:
     image: nginx
-    container_name: ${PROJECT_NAME}-webserver
-#    working_dir: /application
-#    volumes:
-#      - .://usr/share/nginx/html/
-#      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    container_name: ${PROJECT_NAME}-nginx
+    working_dir: /symfony
+    volumes:
+      - .:/symfony
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "8000:80"
 
   php-fpm:
     build: docker/php-fpm
     container_name: ${PROJECT_NAME}-php-fpm
-#    working_dir: /application
+    working_dir: /symfony
     volumes:
-#      - .:/application
-#      - ./docker/php-fpm/php-ini:/etc/php/7.2/fpm/conf.d/99-overrides.ini
+      - .:/symfony
+#      - ./docker/php-fpm/php-ini.ini:/etc/php/7.2/fpm/conf.d/99-overrides.ini
