--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,7 +5,7 @@ server {
 
     access_log /var/log/nginx/symfony.access.log;
 
-    root /application/public;
+    root /symfony/public;
     index index.php;
 
     if (!-e $request_filename) {
@@ -16,7 +16,7 @@ server {
         fastcgi_pass php-fpm:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/symfony_errors.log";
+        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/symfony_php_errors.log";
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
         include fastcgi_params;
