--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,10 +11,10 @@ services:
     volumes:
       - db-data:/symfony
     environment:
-      - MYSQL_ROOT_PASSWORD=docker_root
-      - MYSQL_DATABASE=sf4_db
-      - MYSQL_USER=sf4_user
-      - MYSQL_PASSWORD=sf4_pw
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     ports:
       - "8306:3306"
 
@@ -25,6 +25,7 @@ services:
     volumes:
       - .:/symfony
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+#      - ./logs/symfony:/var/www/symfony/app/logs //todo
     ports:
       - "8000:80"
 
